[package]

name          = "tokio-proto"
version       = "0.1.0"
license       = "MIT/Apache-2.0"
authors       = ["Carl Lerche <me@carllerche.com>"]
description   = """
A network application framework for rapid development and highly scalable
production deployments of clients and servers.
"""

documentation = "https://docs.rs/tokio-proto/0.1"
homepage      = "https://tokio.rs"
repository    = "https://github.com/tokio-rs/tokio-proto"
readme        = "README.md"
keywords      = [ "io", "async", "non-blocking", "futures" ]
exclude       = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]

[dependencies]
log = "0.3.6"
slab = "0.3"
take = "0.1.0"
rand = "0.3.14"
smallvec = "0.2.0"
futures = "0.1.6"
tokio-core = "0.1.1"
net2 = "0.2"
tokio-service = "0.1"

[dev-dependencies]
env_logger = "0.3.0"
lazycell = "0.4.0"
mio = "0.6"
